versioned_docs/version-1.6/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant.mdx
---
sidebar_position: 4
title: "Embed the SaaSus SDK into your Web Application and make it multi-tenant"
slug: "embed-the-saasus-sdk-into-your-web-application-and-make-it-multi-tenant"
excerpt: ""
hidden: false
createdAt: "Thu Jan 26 2023 02:07:21 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Thu Dec 07 2023 01:25:35 GMT+0000 (Coordinated Universal Time)"
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";


## Embed the SaaSus SDK in your web application

\*Programming knowledge is required

### Check your SaaS ID, API key, and client secret

First, view your API key in the **SaaSus Development Console**. This key is used to configure the application.

A "SaaS ID" is usually generated by default. If needed, you can use your existing SaaS ID or generate a new one by clicking the Reissue SaaS ID button.

The "API key" is not automatically generated in the initial state. If necessary, click the "Issue API Key" button to issue a new key.

\*Please note that if you reissue the SaaS ID after the SaaS operation has actually started, you will also need to update the SaaS ID used within the SaaS application.

(Please be careful not to leak your API key to anyone. The API key displayed in this tutorial has already been disabled.)

![01](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-01.png)

### Authentication Redirect URL Setting

The SaaSus Platform generates a login screen based on the domain name you set. After login, the authentication information is transferred to the SaaS side. The URL of the SaaS to which the authentication information is transferred must be registered as the Callback URL.

Click "Auth Transition" from the side menu to display the Callback URL setting screen.

Normally, the Callback URL is set based on the provided SaaS URL. However, in this case, since the sample application is run locally, the following settings are used.

[http://localhost/callback](http://localhost/callback)

![08](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-08.png)

### Prepare to use the SaaSus SDK

Open the sample application we prepared earlier in the development environment.

As we did at the beginning, make sure that the docker container is started using init.sh and the sample application is running on [http://localhost/board](http://localhost/board).

First, to easily use the SaaSus Platform, embed the SaaSus SDK into your application.

In this setup the SDK is PHP based, the next step is using Composer.

Enter the php container and setup using composer.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```txt
repo$ docker compose exec php bash
root@xxx:/var/www# cd api
root@xxx:/var/www/api# composer config repositories.saasus-platform/saasus-sdk-php vcs https://github.com/saasus-platform/saasus-sdk-php
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```txt
repo$ docker compose exec node bash
```

```mdx-code-block
</TabItem>
</Tabs>
```

In the api directory add the SDK using the following composer command

```txt
root@xxx:/var/www/api# composer require saasus-platform/saasus-sdk-php
```

After installing the SaaSus SDK, define the environment variables necessary for using the SaaSus SDK.

Create a .env file by copying the .env.example file in the api directory and edit the following part at the bottom of the .env file

```.env
### for SaaS Platform
SAASUS_SAAS_ID="saasid_98tjo3wifaoua (SaaS ID of the screen)"
SAASUS_API_KEY="apikey_kjntowjfoasnkjntwonsflajsno4as (Screen API KEY)"
SAASUS_SECRET_KEY=" (screen client secret)"
SAASUS_LOGIN_URL="https://auth.sample.saasus.jp/ (Login screen URL)"
```

SAASUS_SAAS_ID, SAASUS_API_KEY, SAASUS_SECRET_KEY are the SaaS ID, API Key, and client secret displayed on the console page,  
SAASUS_LOGIN_URL sets the URL of the login page created on the SaaSus development console.

### Include Authentication Module

Next, include the SaaSus Platform's authentication module.

In this application, authentication is required at the root of all URIs. If not authenticated, the application cannot be used. The SaaSus authentication function is incorporated as middleware through Laravel.

As default in

api/routes/web.php

, the Laravel standard authentication function is used, replace it with the SaaSus authentication function.

Default code

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
Route::middleware('auth')->group(function () {
   Route::get('/', function () {
       return view('welcome');
   });
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');
});

require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
app.use(
  session({
    secret: "secret",
    resave: false,
    saveUninitialized: false,
  })
);
app.use(passport.initialize());
app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

Change to the following in order to incorporate the SaaSus authentication function

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
// Route::middleware('auth')->group(function () {
//     Route::get('/', function () {
//         return view('welcome');
//     });
// Use SaaSus SDK standard Auth Middleware
Route::middleware(\AntiPatternInc\Saasus\Laravel\Middleware\Auth::class)->group(function () {
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');

   Route::redirect('/', '/board');
});

// require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
import { AuthMiddleware } from "saasus-sdk";
...
// app.use(
//   session({
//     secret: "secret",
//     resave: false,
//     saveUninitialized: false,
//   })
// );
app.use(
  ["/chat", "/api/board", "/api/post", "/api/plan", "/api/tenant"],
  AuthMiddleware
);
// app.use(passport.initialize());
// app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

Next prepare a receiver for callback from the authentication screen. Earlier in the set up on the SaaSus development console, the callback destination is defined as [http://localhost/callback](http://localhost/callback), thus receivable it at /callback .

In order to set up the callback, add the following to the last line of api/routes/web.php:

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
// Use the SaaS SDK standard Callback Controller to store JWT in Cookie or Local Storage
Route::get('/callback', 'AntiPatternInc\Saasus\Laravel\Controllers\CallbackController@index');
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
import { CallbackRouter } from "saasus-sdk";
...
app.use("/callback", callbackRouter);
```

```mdx-code-block
</TabItem>
</Tabs>
```

In addition, add the path to api/config/view.php so that the views provided by the SaaSus SDK can be used

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   'paths' => [
      resource_path('views'),
      # ↓Add this line: View directory provided by SaaSus SDK
      resource_path('../vendor/saasus-platform/saasus-sdk-php/src/Laravel/Views'),
   ],
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```html
<!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    <title>Auth Callback</title>
  </head>

  <body>
    <script>
      location.href = "/chat";
    </script>
  </body>
</html>
```

```mdx-code-block
</TabItem>
</Tabs>
```

With this setup, the authentication information set in the SaaSus Platform will be passed as part of the request when the controller of the application is reached.

Add a request argument to the index function of api/app/Http/Controllers/MessageController.php and use dd to check if $request contains userinfo

Change the following 4 lines.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
       // Check if user information is passed from SaaSus Platform
       dd($request->userinfo);
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getChats = async (req: Request, res: Response) => {
  // Check if user information is passed from SaaSus Platform
  console.log(req.userinfo);
```

```mdx-code-block
</TabItem>
</Tabs>
```

Once this step is completed the basic SDK setup is complete.

Now, log in from the SaaSus Platform and check the operation.

### Confirmation of SaaSus SDK Integration

Access the login page created on the SaaSus Platform.

Access the login page on the domain set on the console, such as [https://auth.sample.saasus.jp](https://auth.sample.saasus.jp).

![02](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-02.png)

Log in with the email address and password of the user created earlier, then the page will be redirected to the URL set in the Callback URL along with the authentication information.

For example, log in with [user1-1@example.com](mailto:user1-1@example.com).

If there are no problems with the previous code, the following should be displayed after login.

```php
array:3 [▼
  "email" => "user1-1@example.com"
  "id" => "f6a02019-1306-431f-b93d-3a756b312481"
  "tenants" => array:1 [▼
    0 => array:7 [▼
      "back_office_staff_email" => "saasus-sample-tenant1@example.com"
      "completed_sign_up" => true
      "envs" => array:1 [▼
        0 => array:3 [▼
          "id" => 1
          "name" => "dev"
          "roles" => array:1 [▼
            0 => array:2 [▼
              "display_name" => "一般利用者"
              "role_name" => "user"
            ]
          ]
        ]
      ]
      "id" => "7b639774-6fba-4b26-b580-f3d755876a4b"
      "name" => "テナントのサンプルその１"
      "plan_id" => "bc011444-a9f1-41c0-8251-bc8928b09ee7"
      "user_attribute" => array:1 [▼
        "username" => "user1-1"
      ]
    ]
  ]
]
```

On the application side, you can see that the user information and tenant information set earlier on the SaaSus Platform.

The redirect URL is received by the Callback processing of the SaaS SDK standard ([http://localhost/callback](http://localhost/callback)), and in that process the authentication information is stored in the browser's local storage and cookies.

Then, with the Auth Middleware of the SaaSus SDK, use the SaaSus Platform to validate the authentication information, get the user information, and put in the Request object.

After that, the application's controller will take over, so at this point the application already has the logged-in person's information.

Now let's use this information to make the sample bulletin board application multi-tenant ready!

:::info
The automatically generated login screen can display the service name and icon, and can set links to terms of use and privacy policy.<br/>
For the setting method, see [Customizing authentication screens such as login screens](../saas-development-console/authorization-screen-customize).
:::

### Making the Sample Application Multi-Tenant

As api/app/Http/Controllers/MessageController.php contains the main process, the processing for multi-tenant support will be put here.

First, change the display part.  
Rewrite the whole public function index.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
      // $request->userinfo contains various user information and tenant information, so use it
      $messages = Message::where('tenant_id', $request->userinfo['tenants'][0]['id'])->get();
      return view('messageBoard.index', ['messages' => $messages, 'plans' => $this::PLANS, 'tenant_name' => $request->userinfo['tenants'][0]['name']]);
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getChats = async (req: Request, res: Response) => {
  try {
    const messages = await db.Messages.findAll({
      where: {
        tenant_id: req.userInfo?.tenants[0].id,
      },
    });
    res.render("chat", {
      messages: messages,
      plans: PLANS,
      tenant_name: TENANT_NAME,
    });
  } catch (error) {
    console.error(error);
    res.redirect("/chat");
  }
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

In this way, search the DB based on the passed tenant ID.

Below is the post function.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function post(Request $request)
   {
      $validated = $request->validate([
          'message' => 'required|max:255'
      ]);

      // Acquire various information from userinfo of $request and use it for judgment
      $message = Message::create([
          'tenant_id' => $request->userinfo['tenants'][0]['id'],
          'user_id' => $request->userinfo['tenants'][0]['user_attribute']['username'],
          'message' => $request->message,
      ]);

      $request->session()->regenerateToken();
      return redirect()->route('board');
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const postChats = async (req: Request, res: Response) => {
  const mes = req.body.message;
  // Acquire various information from userinfo of $request and use it for judgment
  const tenantId = req.userInfo?.tenants[0].id || "";
  const userName =
    req.userInfo?.tenants[0].user_attribute.username || "テストユーザー";
  try {
    await db.Messages.create({
      tenant_id: tenantId,
      user_id: userName,
      message: mes,
    });
  } catch (error) {
    console.error(error);
  }
  res.redirect("/chat");
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

Store tenant ID and user name as a set based on the passed user attributes.

Next, display the user ID on the page display.

Edit api/resources/views/messageBoard/index.blade.php.

Change this $message->user->name part to $message->user_id around line 32.

Before change:

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user->name }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

Revised:

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user_id }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

Multi-tenant support is now available!

Now log in and try it out.

As before, log in from the login page created on the SaaSus Platform.

When you log in, you can see that the tenant name has changed to what was set in the SaaS development console earlier.

![03](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-03.png)

There isn't any data yet, so let's post some.

![04](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-04.png)

The user name is also displayed.

Go back to the login screen, and log in as [user1-2@example.com](mailto:user1-2@example.com), and make some posts.

![05](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-05.png)

It will be reflected on the page.

Next log in with another tenant's user, [user2-1@example.com](mailto:user2-1@example.com)

![06](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-06.png)

The displayed tenant name has changed, and the content is empty.

This shows that displayed information is limited to each specific tenant.

Now, after posting several posts in the same way, log in with [user2-2@example.com](mailto:user2-2@example.com) and confirm that the information of the same tenant can be displayed.

![07](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-07.png)

Thus, per-tenant isolation is complete.

As for the current separation method, a pool model to separate tenants within the same DB and separated tenants using a simple method. Even if a different tenant separation method per your requirements, such as schema separation or database separation, you can also use the SaaSus SDK to acquire tenant information and implement it.

Now that the tenants are separated, next is the implementation of billing-related functions.

Let's implement the first steps of pricing, metering, and billing. For billing, we use a billing SaaS called Stripe. If you don't use Stripe, skip the billing part.
