versioned_docs/version-1.11/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant.mdx
---
sidebar_position: 4
title: "Embed the SaaSus SDK into your Web Application and make it multi-tenant"
slug: "embed-the-saasus-sdk-into-your-web-application-and-make-it-multi-tenant"
excerpt: ""
hidden: false
createdAt: "Thu Jan 26 2023 02:07:21 GMT+0000 (Coordinated Universal Time)"
updatedAt: "Thu Dec 07 2023 01:25:35 GMT+0000 (Coordinated Universal Time)"
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";


## Embed the SaaSus SDK in your web application

\*Programming knowledge is required

### Reconfirm SaaS ID, API Key and Client Secret

First, check the API key on the **SaaSus Development Console**. Use this in your application settings  
(Be careful not to expose your API key to other people. The API key displayed in this tutorial has already been deactivated.)

![01](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-01.png)

### Prepare to use the SaaSus SDK

Open the sample application we prepared earlier in the development environment.

As mentioned at the beginning, the docker container has been started using init.sh, and

please check that the sample application is running at [http://localhost/board](http://localhost/board) for PHP, 

or at [http://localhost:3000/board](http://localhost:3000/board) for Next.js.

First, to easily use the SaaSus Platform, embed the SaaSus SDK into your application.

For PHP, use composer.

For Next.js, use npm.

Open a terminal and set up the SDK.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```txt
repo$ docker compose exec php bash
root@xxx:/var/www# cd api
root@xxx:/var/www/api# composer config repositories.saasus-platform/saasus-sdk-php vcs https://github.com/saasus-platform/saasus-sdk-php
root@xxx:/var/www/api# composer require saasus-platform/saasus-sdk-php
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```txt
repo$ docker compose exec node bash
root@xxx:/app# npm install saasus-sdk
```

```mdx-code-block
</TabItem>
</Tabs>
```

After installing the SaaSus SDK, define the environment variables necessary for using the SaaSus SDK.

Create a .env file by copying the .env.example file in the api directory and edit the following part at the bottom of the .env file

```.env
### for SaaS Platform
SAASUS_SAAS_ID="saasid_98tjo3wifaoua (SaaS ID of the screen)"
SAASUS_API_KEY="apikey_kjntowjfoasnkjntwonsflajsno4as (Screen API KEY)"
SAASUS_SECRET_KEY=" (screen client secret)"
SAASUS_LOGIN_URL="https://auth.sample.saasus.jp/ (Login screen URL)"
SAASUS_AUTH_MODE="api"（For Next.js, please write）
```

SAASUS_SAAS_ID, SAASUS_API_KEY, SAASUS_SECRET_KEY are the SaaS ID, API Key, and client secret displayed on the console page,  
SAASUS_LOGIN_URL sets the URL of the login page created on the SaaSus development console.

### Include Authentication Module

Next, include the SaaSus Platform authentication module.

In this application, authentication is required for all URI routes. If authentication is not successful, the application will be unavailable.

If you are checking the operation of the Next.js sample app, create a page that receives the callback.

Create front/src/pages/callback/index.tsx and add the following.

<Tabs>
<TabItem value="typescript" label="Typescript">

```typescript
import Container from '@mui/material/Container'
import { useRouter } from 'next/router'
import { useEffect } from 'react'
import axios from '@/lib/axios'

const Callback = () => {
  const router = useRouter()
  const query = router.query
  const code = query.code as string

  const fetchAuthCredentials = async () => {
    const res = await axios.get(`/api/callback?code=${code}`)
    // Save the received JWT to Local Storage
    const idToken = res.data.id_token as string
    localStorage.setItem('SaaSusIdToken', idToken)
    router.replace('/board')
  }

  useEffect(() => {
    if (router.isReady) {
      if (code) {
        fetchAuthCredentials()
      }
    }
  }, [query, router])

  return <Container disableGutters></Container>
}

export default Callback
```

</TabItem>
</Tabs>

Here, we obtain authentication information from the API based on the temporary code that was passed, store the id_token in the browser's local storage, and redirect to the board page.

Next, we'll add this saved token to the header when making an API call later.

Edit front/src/pages/board/index.tsx.

<Tabs>
<TabItem value="typescript" label="Typescript">

```typescript
import { MessageBoard } from '@/components/MessageBoard'
import { formValueFormat } from '@/const/formTemplate'
import Container from '@mui/material/Container'
import useSWR, { useSWRConfig } from 'swr'
import axios from '@/lib/axios'

const Board = () => {
 const { mutate } = useSWRConfig()
 const fetcher = (url: string) => {
   // Get the JWT from Local Storage, attach it as a Bearer token in the header, and make an API call
   const token = localStorage.getItem('SaaSusIdToken')
   if (!token) return ''
   return axios
     .get(url, {
       headers: {
         Authorization: `Bearer ${token}`,
       },
     })
     .then((res) => res.data)
 }
 const { data: tenant_name, error: tenant_error } = useSWR(
   `/api/tenant`,
   fetcher
 )
 const { data: messages, error } = useSWR(`/api/board`, fetcher, {
   refreshInterval: 5000,
 })
 if (error || tenant_error) return <div>failed to load</div>
 if (!messages || !tenant_name) return <div>loading...</div>

 const handleSubmit = async (value: string) => {
   const formValue = { ...formValueFormat, message: value }
   // Immediately update local data without revalidation
   mutate('/api/board', [...messages, formValue], false)
   // Send a request to the API to update
   // Get the JWT from Local Storage, attach it as a Bearer token in the header, and make an API call
   const token = localStorage.getItem('SaaSusIdToken')
   await axios.post('/api/post', formValue, {
     headers: {
       Authorization: `Bearer ${token}`,
     },
   })
 }

 return (
   <Container disableGutters>
     <MessageBoard
       messages={messages}
       tenant_name={tenant_name}
       onSubmit={handleSubmit}
     />
   </Container>
 )
}

export default Board
```

</TabItem>
</Tabs>

This time, there are only a few API calls, so we're simply specifying them directly when calling axios, but it might be better to standardize them using middleware or something similar.

Next, we'll adjust the backend.

The current situation is

For PHP, use api/routes/web.php

For Next.js, use api/app.ts

The authentication function is used in this section, so replace it with the SaaSus authentication function.

Default code

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
Route::middleware('auth')->group(function () {
   Route::get('/', function () {
       return view('welcome');
   });
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');
});

require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
app.use(
  session({
    secret: "secret",
    resave: false,
    saveUninitialized: false,
  })
);
app.use(passport.initialize());
app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

Change to the following in order to incorporate the SaaSus authentication function

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
// Route::middleware('auth')->group(function () {
//     Route::get('/', function () {
//         return view('welcome');
//     });
// Use SaaSus SDK standard Auth Middleware
Route::middleware(\AntiPatternInc\Saasus\Laravel\Middleware\Auth::class)->group(function () {
   Route::get('/dispatch', 'App\Http\Controllers\DispatchController@index')->name('dispatch');
   Route::get('/board', 'App\Http\Controllers\MessageController@index')->name('board');
   Route::post('/post', 'App\Http\Controllers\MessageController@post')->name('post');

   Route::redirect('/', '/board');
});

// require __DIR__ . '/auth.php';
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
import { AuthMiddleware } from "saasus-sdk";
...
// app.use(
//   session({
//     secret: "secret",
//     resave: false,
//     saveUninitialized: false,
//   })
// );
app.use(
  ["/chat", "/api/board", "/api/post", "/api/plan", "/api/tenant"],
  AuthMiddleware
);
// app.use(passport.initialize());
// app.use(passport.session());
```

```mdx-code-block
</TabItem>
</Tabs>
```

Do it like this.

And for PHP, we will prepare an endpoint to handle the callback from the authentication screen.

Earlier, in the SaaSus Development Console, we defined the callback URL as

[http://localhost/callback](http://localhost/callback) 

so we’ll set it up to receive at /callback.

Add the following to the last line of api/routes/web.php

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP">
```

```php
// Use the SaaSus SDK standard Callback Controller to put the JWT into Cookies or Local Storage
Route::get('/callback', 'AntiPatternInc\Saasus\Laravel\Controllers\CallbackController@index');
```

```mdx-code-block
</TabItem>
</Tabs>
```

Furthermore, to be able to use the View provided by the SaaSus SDK,

Add the path to api/config/view.php.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   'paths' => [
       resource_path('views'),
       # ↓Add this line: Directory of views provided by SaaSus SDK
       resource_path('../vendor/saasus-platform/saasus-sdk-php/src/Laravel/Views'),
   ],
```

```mdx-code-block
</TabItem>
</Tabs>
```

For Next.js,

In the previously created front/src/pages/callback/index.tsx, the /api/callback endpoint is used to obtain authentication information.

To handle this endpoint, follow these steps to configure it.

Add the import statement and app.use to api/app.ts to define the route.

```mdx-code-block
<Tabs>
<TabItem value="nodejs" label="Node.js">
```

```js
import { router as apiCallbackRouter } from "./routes/api/callback";

// Other code omitted

app.use("/api/callback", apiCallbackRouter);
```

```mdx-code-block
</TabItem>
</Tabs>
```

To implement the /api/callback endpoint, create api/routes/api/callback.ts and add the following code.
```mdx-code-block
<Tabs>
<TabItem value="nodejs" label="Node.js">
```

```js
import express from "express";
const router = express.Router();
import { CallbackRouteFunction } from "saasus-sdk";

router.get("/", CallbackRouteFunction);

export { router };
```

```mdx-code-block
</TabItem>
</Tabs>
```

With the settings up to this point, the authentication information set in SaaSus Platform will be passed as part of the request when the application's Controller is reached.

For PHP, add a Request argument to index in api/app/Http/Controllers/MessageController.php and use dd to check if userinfo is included in $request.

For Next.js, add a Request argument to getBoard in api/controllers/api/board.ts and use console.log to check if userinfo is included in req.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
       // Check if user information is passed from SaaSus Platform
       dd($request->userinfo);
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getBoard = async (req: Request, res: Response) => {
  // Check whether user information is being passed from SaaSus Platform
  console.log(req.userInfo);
```

```mdx-code-block
</TabItem>
</Tabs>
```

Once this step is completed the basic SDK setup is complete.

Now, log in from the SaaSus Platform and check the operation.

### Confirmation of SaaSus SDK Integration

Access the login page created on the SaaSus Platform.

Access the login page on the domain set on the console, such as [https://auth.sample.saasus.jp](https://auth.sample.saasus.jp).

![02](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-02.png)

Log in with the email address and password of the user created earlier, then the page will be redirected to the URL set in the Callback URL along with the authentication information.

For example, log in with [user1-1@example.com](mailto:user1-1@example.com).

If there are no problems with the previous code, the following should be displayed after login.

```php
array:3 [▼
  "email" => "user1-1@example.com"
  "id" => "f6a02019-1306-431f-b93d-3a756b312481"
  "tenants" => array:1 [▼
    0 => array:7 [▼
      "back_office_staff_email" => "saasus-sample-tenant1@example.com"
      "completed_sign_up" => true
      "envs" => array:1 [▼
        0 => array:3 [▼
          "id" => 1
          "name" => "dev"
          "roles" => array:1 [▼
            0 => array:2 [▼
              "display_name" => "一般利用者"
              "role_name" => "user"
            ]
          ]
        ]
      ]
      "id" => "7b639774-6fba-4b26-b580-f3d755876a4b"
      "name" => "テナントのサンプルその１"
      "plan_id" => "bc011444-a9f1-41c0-8251-bc8928b09ee7"
      "user_attribute" => array:1 [▼
        "username" => "user1-1"
      ]
    ]
  ]
]
```

On the application side, you can see that the user information and tenant information set earlier on the SaaSus Platform.

The redirect URL is received by the Callback processing of the SaaS SDK standard ([http://localhost/callback](http://localhost/callback)), and in that process the authentication information is stored in the browser's local storage and cookies.

Then, with the Auth Middleware of the SaaSus SDK, use the SaaSus Platform to validate the authentication information, get the user information, and put in the Request object.

After that, the application's controller will take over, so at this point the application already has the logged-in person's information.

Now let's use this information to make the sample bulletin board application multi-tenant ready!

### Making the Sample Application Multi-Tenant

For PHP, api/app/Http/Controllers/MessageController.php

For Next.js, api/controllers/api/board.ts

This is the main process, so let's add the process to make it multi-tenant compatible here.

First, change the display part.
Let's rewrite the whole part below.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function index(Request $request)
   {
      // $request->userinfo contains various user information and tenant information, so use it
      $messages = Message::where('tenant_id', $request->userinfo['tenants'][0]['id'])->get();
      return view('messageBoard.index', ['messages' => $messages, 'plans' => $this::PLANS, 'tenant_name' => $request->userinfo['tenants'][0]['name']]);
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const getBoard = async (req: Request, res: Response) => {
  try {
    const messages = await db.Messages.findAll({
      where: {
        tenant_id: req.userInfo?.tenants[0].id,
      },
    });
    return res.json(messages);
  } catch (error) {
    console.error(error);
    return res
      .status(500)
      .send({ redirect_url: process.env.SAASUS_LOGIN_URL || "" });
  }
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

In this way, search the DB based on the passed tenant ID.

Below is the post function.

```mdx-code-block
<Tabs>
<TabItem value="php" label="PHP" default>
```

```php
   public function post(Request $request)
   {
      $validated = $request->validate([
          'message' => 'required|max:255'
      ]);

      // Acquire various information from userinfo of $request and use it for judgment
      $message = Message::create([
          'tenant_id' => $request->userinfo['tenants'][0]['id'],
          'user_id' => $request->userinfo['tenants'][0]['user_attribute']['username'],
          'message' => $request->message,
      ]);

      $request->session()->regenerateToken();
      return redirect()->route('board');
   }
```

```mdx-code-block
</TabItem>
<TabItem value="nodejs" label="Node.js">
```

```js
const post = async (req: Request, res: Response) => {
  const mes = req.body.message;
  const tenantId = req.userInfo?.tenants[0].id || "";
  const userName =
    req.userInfo?.tenants[0].user_attribute.username || "test user";
  try {
    await db.Messages.create({
      tenant_id: tenantId,
      user_id: userName,
      message: mes,
    });
    return res.status(201).send();
  } catch (error) {
    console.error(error);
  }
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

Store tenant ID and user name as a set based on the passed user attributes.

Next, display the user ID on the page display.

For PHP, edit api/resources/views/messageBoard/index.blade.php.

Around line 32, change $message->user->name to $message->user_id.

Before change:

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user->name }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

Revised:

```blade
                   <div class="mt-4">
                       <p>
                           {{ $message->user_id }}
                           <span class="text-xs text-gray-500">
                               {{ $message->created_at->format('Y/m/d H:i') }}
                           </span>
                       </p>
```

No modifications are required for Next.js.

Multi-tenant support is now available!

Now log in and try it out.

As before, log in from the login page created on the SaaSus Platform.

When you log in, you can see that the tenant name has changed to what was set in the SaaS development console earlier.
(However, in the Next.js frontend, the tenant name is fixed as "Anti-Pattern Inc." and does not reflect changes.)

![03](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-03.png)

There isn't any data yet, so let's post some.

![04](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-04.png)

The user name is also displayed.

Go back to the login screen, and log in as [user1-2@example.com](mailto:user1-2@example.com), and make some posts.

![05](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-05.png)

It will be reflected on the page.

Next log in with another tenant's user, [user2-1@example.com](mailto:user2-1@example.com)

![06](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-06.png)

The displayed tenant name has changed, and the content is empty.

This shows that displayed information is limited to each specific tenant.

Now, after posting several posts in the same way, log in with [user2-2@example.com](mailto:user2-2@example.com) and confirm that the information of the same tenant can be displayed.

![07](/img/tutorial/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant/embed-the-saasus-sdk-into-your-web-application-and-make-int-multi-tenant-07.png)

Thus, per-tenant isolation is complete.

As for the current separation method, a pool model to separate tenants within the same DB and separated tenants using a simple method. Even if a different tenant separation method per your requirements, such as schema separation or database separation, you can also use the SaaSus SDK to acquire tenant information and implement it.

Now that the tenants are separated, next is the implementation of billing-related functions.

Let's implement the first steps of pricing, metering, and billing. For billing, we use a billing SaaS called Stripe. If you don't use Stripe, skip the billing part.
